--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,7 @@ body {
   width: 450px;
   height: 550px;
   display: grid;
-  grid-template-rows: 80px 100px 1fr;
+  grid-template-rows: 120px 100px 1fr;
   font-size: 3rem;
   font-weight: 800;
   grid-gap: $grid-gap;
@@ -72,7 +72,7 @@ body {
   }
 }
 
-.operation {
+.operator {
   background-color: $bg-operator;
   &:hover {
     background-color: #5a5a5a;
@@ -88,4 +88,9 @@ body {
   &:hover {
     background-color: #da0808;
   }
+}
+
+.equal {
+  grid-column: 2/4;
+  background-color: $bg-operator;
 }
